# flask_auth_api

./: .flake8  .gitignore  README.md  pyproject.toml
async_api/: .env.example  .pre-commit-config.yaml
async_api/etl/: entrypoint.sh  indexes.py  main.py  psql_extractor.py  state.py
async_api/src/: main.py  requirements.txt
async_api/src/api/: __init__.py
async_api/src/core/: auth.py  config.py  custom_logger.py
async_api/src/data_services/: cache.py
async_api/src/db/: elastic.py  redis.py
async_api/src/models/: schemas.py
async_api/src/services/: common.py  genres.py  movies.py  persons.py
auth_api/: .env.example  .pre-commit-config.yaml  README.md  app.py  databases.py  docker-compose.yml  pyproject.toml
auth_api/core/: settings.py
auth_api/migrations/: Dockerfile  alembic.ini  db_schema.sql  env.py
auth_api/models/: create_partitions.py  models.py
auth_api/nginx/: nginx.conf
auth_api/nginx/conf.d/: site.conf
auth_api/src/: Dockerfile  Dockerfile_poetry  entrypoint.sh  main.py  manage.py  requirements.txt
auth_api/src/api/: common.py
auth_api/src/api/v1/: routes.py
auth_api/src/api/v1/roles/: routes.py
auth_api/src/api/v1/social/: routes.py
auth_api/src/api/v1/user/: routes.py
auth_api/src/core/: containers.py  documentation.py  fast_json.py  security_setup.py  settings.py  tracer_setup.py  utils.py
auth_api/src/db/: redis.py  sql.py
auth_api/src/migrations/: env.py
auth_api/src/migrations/versions/: 6a6f5318432d_create_initial_tables.py  b5386b663e7e_create_initial_tables.py  f09fd024268e_create_initial_tables.py
auth_api/src/models/: create_partitions.py  models.py
auth_api/src/services/: base.py  social.py  user.py
auth_api/src/socials/: interface.py
auth_api/src/socials/providers/: google.py  vk.py  yandex.py
(+14 files in other folders)
